Made tooltips hide instantly on scroll and fixed modal styling on mobile

--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -61,6 +61,7 @@
   top: 5px;
   right: 5px;
   color: $md-input-label-color;
+  pointer-events: none;
 
   transition: all 0.3s;
 }
