--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -19,7 +19,7 @@
   background-color: #fff;
   box-shadow: $z-level-1;
   width: 600px;
-  max-width: 80%;
+  max-width: 90%;
   border-radius: 2px;
   z-index: 1001;
 
